--- a/src/components/perfil/Compra/Compra.css
+++ b/src/components/perfil/Compra/Compra.css
@@ -1,15 +1,50 @@
-.compra-actual img{
-  width: 100px;
-  height: 100px;
+.compra-actual{
+  margin: 0;
+  display: flex;
+flex-direction: row;
+justify-content: flex-start;
+  flex-wrap: wrap;
 font-family: 'Roboto', sans-serif;
 }
 
+.compra-actual img{
+  width: 150px;
+  height: 150px;
+  display: flex;
+flex-direction: row;
+justify-content: flex-start;
+position: relative;
 
-#des{
-  position:relative;
+
+}
+.compra-actual img{
+  width: 150px;
+  height: 150px;
+  display: flex;
+flex-direction: row;
+justify-content: flex-start;
+position: relative;
+
+
+}
+
+
+
+.des{
+  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   text-align: justify;
   top: -70px;
-  margin-left: 50%;
 
 
+}
+
+#precio{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: relative;
+  left: 10px;
 }
