--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -288,7 +288,7 @@ a{
 
 /*Publi*/
 .publi{
-    background-image: url('https://images.pexels.com/photos/612891/pexels-photo-612891.jpeg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb');
+    background-image: url('../../assets/herbal-2562218__480.jpg');
     height:270px;
     width:100%;
     text-align: center;
