--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    position: fixed;
     z-index: 9999;
 }
 .divider{
